--- a/album.html
+++ b/album.html
@@ -848,6 +848,11 @@
 
       </div>
 
+
+           PDF Download<a href ="filesdocument/Manglumukh Village Dimapur Nagaland.pdf" attributes-list> Click Here
+
+
+
       </div>
     </section><!-- End Portfolio Section -->
   
