--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -41,7 +41,7 @@
   <section id="topbar" class="d-flex align-items-center">
     <div class="container d-flex justify-content-center justify-content-md-between">
       <div class="contact-info d-flex align-items-center">
-        <i class="bi bi-envelope-fill"></i><a href="mailto:manglumukhvillage@gmail.com">Click Here! To Mail.</a>
+        <i class="bi bi-envelope-fill"></i><a href="mailto:manglumukhvillage@gmail.com">Mail Here.</a>
 		
         <i class="bi bi-phone-fill phone-icon"></i>Contact At +91 7005425848
       </div>
