--- a/album.html
+++ b/album.html
@@ -704,7 +704,7 @@
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+        <!---<div class="col-lg-4 col-md-6 portfolio-item filter-card">
           <div class="portfolio-wrap">
             <figure>
               <img src="assets/img/portfolio/portfolio-34.jpg" class="img-fluid" alt="">
@@ -717,7 +717,7 @@
               <p>&copy; Copyright 2022</p>
             </div>
           </div>
-        </div>
+        </div>-->
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
@@ -734,7 +734,7 @@
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+        <!---<div class="col-lg-4 col-md-6 portfolio-item filter-app">
           <div class="portfolio-wrap">
             <figure>
               <img src="assets/img/portfolio/portfolio-36.jpg" class="img-fluid" alt="">
@@ -747,7 +747,7 @@
               <p>&copy; Copyright 2022</p>
             </div>
           </div>
-        </div>
+        </div>-->
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-card">
           <div class="portfolio-wrap">
