--- a/index.html
+++ b/index.html
@@ -708,8 +708,9 @@
           
         </div>
 		<br>
+		<iframe src="https://maps.google.com/maps?q=manglumukh%20village%20dimapur&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" style="border:0; width: 100%; height: 500px;" allowfullscreen></iframe>
 		
-        <div class="mapouter"><div class="gmap_canvas"><iframe width="1080" height="387" id="gmap_canvas" src="https://maps.google.com/maps?q=manglumukh
+        <!--<div class="mapouter"><div class="gmap_canvas"><iframe width="1080" height="387" id="gmap_canvas" src="https://maps.google.com/maps?q=manglumukh
 
 %20Village&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a 
 
@@ -717,7 +718,7 @@ href="https://fmovies-online.net"></a><br><style>.mapouter{position:relative;tex
 
 href="https://www.embedgooglemap.net">add google map to website</a><style>.gmap_canvas {overflow:hidden;background:none!
 
-important;height:387px;width:1080px;}</style></div></div>
+important;height:387px;width:1080px;}</style></div></div>-->
 
       </div>
     </section><!-- End Contact Section -->
