--- a/album.html
+++ b/album.html
@@ -537,7 +537,7 @@
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+        <!--<div class="col-lg-4 col-md-6 portfolio-item filter-app">
           <div class="portfolio-wrap">
             <figure>
               <img src="assets/img/portfolio/portfolio-23.jpg" class="img-fluid" alt="Manglumukh Village Dimapur">
@@ -550,7 +550,7 @@
               <p>&copy; Copyright 2022</p>
             </div>
           </div>
-        </div>
+        </div>-->
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-card">
           <div class="portfolio-wrap">
@@ -582,7 +582,7 @@
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+        <!--<div class="col-lg-4 col-md-6 portfolio-item filter-app">
           <div class="portfolio-wrap">
             <figure>
               <img src="assets/img/portfolio/portfolio-26.jpg" class="img-fluid" alt="Manglumukh Village Dimapur">
@@ -595,7 +595,7 @@
               <p>&copy; Copyright 2022</p>
             </div>
           </div>
-        </div>
+        </div>-->
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-card">
           <div class="portfolio-wrap">
@@ -627,7 +627,7 @@
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+       <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
             <figure>
               <img src="assets/img/portfolio/portfolio-29.jpg" class="img-fluid" alt="Manglumukh Village Dimapur">
@@ -640,7 +640,7 @@
               <p>&copy; Copyright 2022</p>
             </div>
           </div>
-        </div>
+        </div>-->
 		
 		
 		<div class="col-lg-4 col-md-6 portfolio-item filter-web">
