--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
 
     <section class="inner-page">
       <div class="container">
-        <a class="btn btn-light btn-xl" href="https://manglumukh.github.io/manglumukhvillage.github.io/" target="_blank"
-	><font color="teal"><b>Official Page, Click Here!</b></font></a>  
+        <a class="btn btn-light btn-xl" href="https://manglumukh.github.io/manglumukhvillage.github.io/"
+	><font color="teal"><b>Click Here!</b></font></a>  
       </div>
     </section>
 
