--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
       <div class="container">
 
         <ol>
-          <li><a href="https://manglumukh.github.io/manglumukhvillage.github.io/">Link, Click Here!</a></li>
-          <li><a href="https://manglumukh.github.io/manglumukhvillage.github.io/">Manglumukh Village</a></li>
+          <li><a href="https://manglumukh.github.io/manglumukhvillage.github.io/">Home Click Here!</a></li>
+          <li><a href="https://manglumukh.github.io/manglumukhvillage.github.io/">Manglumukh Village Home Link</a></li>
         </ol>
         
 
@@ -92,7 +92,7 @@
     <section class="inner-page">
       <div class="container">
         <a class="btn btn-light btn-xl" href="https://manglumukh.github.io/manglumukhvillage.github.io/"
-	><font color="teal"><b>Click Here!</b></font></a>  
+	><font color="teal"><b>Official Website Click Here !</b></font></a>  
       </div>
     </section>
 
