--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/day-multipurpose-html-template-for-free/ -->
-        Designed by <a href="https://www.instagram.com/hamsdao_official/" target="_blank">HAMSRINGDAO BHATARI OFFICIAL.</a>
+        Designed by <a href="https://hamsdaobhatari.github.io/official/">HAMSRINGDAO BHATARI OFFICIAL.</a>
       </div>
     </div>
   </footer><!-- End Footer -->
