--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright 2022 <strong><span>Manglumukh Village Dimapur Nagaland</span></strong>. All Rights Reserved
+        Copyright &copy; 2022 <strong><span>Manglumukh Village Dimapur Nagaland</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
