--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div class="contact-info d-flex align-items-center">
         <i class="bi bi-envelope-fill"></i><a href="mailto:manglumukhvillage@gmail.com">Mail Here.</a>
 		
-        <i class="bi bi-phone-fill phone-icon"></i>Contact At +91 7005425848
+        <a href="#"><i class="bi bi-phone-fill phone-icon"></i>Contact At +91-7005425848</a>
       </div>
       <div class="social-links d-none d-md-block">
         <a href="https://twitter.com/HamsringdaoO" target="_blank" class="twitter"><i class="bi bi-twitter"></i></a>
