--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <!-- ======= Header ======= -->
   <header id="header" class="d-flex align-items-center">
     <div class="container d-flex align-items-center justify-content-between">
-<h1 class="logo"><a href="https://manglumukh.github.io/manglumukhvillage.github.io/"><img src="assets/img/portfolio/portfolio-10.jpg" style="align-left-corner">   Manglumukh Village Dimapur</a></h1>
+<h1 class="logo"><a href="https://manglumukh.github.io/manglumukhvillage.github.io/"><img src="assets/img/apple-touch-icon.png" style="align-left-corner">   Manglumukh Village Dimapur</a></h1>
       
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
@@ -110,7 +110,7 @@
 	  
 	  
 	  <a class="btn btn-light btn-xl" href="https://manglumukh.github.io/msun">
-		<font color="#42f5a4"><b>Manglumukh Students' Union Nagaland Click Here !</b></font></a>  
+		<font color="#4287f5"><b>Manglumukh Students' Union Nagaland Click Here !</b></font></a>  
 		</div>
 		</div>
     </section>
