--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-
-  <title>MANGLUMUKH VILLAGE DIMAPUR OFFICIAL</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+	
+  <title>MANGLUMUKH VILLAGE DIMAPUR OFFICIAL WEBSITE</title>
+  <meta content="Manglumukh Village Dimapur Website Official, Manglumukh Village Website Dimapur Nagaland, Manglamukh Village Dimapur Nagaland, Manglamakh Village Dimapur Nagaland, Manglumukh Village Photos" name="description">
+  <meta content="Manglumukh, Village, Website, Dimapur, Nagaland, Location, Place, Direction, MSUN Manglumukh, Manglamukh, Manglamakh, Manglumukh Students' Union Nagaland, Photos" name="keywords">
+  <meta content="Hamsringdao Bhatari Official" name="author">
+  <meta content="7005425848" name="contact">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -23,7 +26,7 @@
   <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-
+  
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
@@ -58,7 +61,7 @@
   <!-- ======= Header ======= -->
   <header id="header" class="d-flex align-items-center">
     <div class="container d-flex align-items-center justify-content-between">
-<h1 class="logo"><a href="https://manglumukh.github.io/manglumukhvillage.github.io/"><img src="assets/img/apple-touch-icon.png" style="align-left-corner">   Manglumukh Village Dimapur</a></h1>
+<h1 class="logo"><a href="https://manglumukh.github.io/manglumukhvillage.github.io/"><img src="assets/img/MANGLUMUKH LOGO.png" style="align-left-corner">   Manglumukh Village Dimapur</a></h1>
       
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
