--- a/index.html
+++ b/index.html
@@ -107,9 +107,13 @@
 	  
         <a class="btn btn-light btn-xl" href="https://manglumukh.github.io/manglumukhvillage.github.io/">
 		<font color="#f54254"><b>Manglumukh Official Website Click Here !</b></font></a>  
-     
+     </div>
+		</div>
+		
 	  
-	  
+	  <br>
+	  <div class="container">
+	  <div class="row">
 	  
 	  
 	  <a class="btn btn-light btn-xl" href="https://manglumukh.github.io/msun">
