--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <meta content="7005425848" name="contact">
 
   <!-- Favicons -->
+  <link href="assets/img/favicon.png" rel="shortcut icon">
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
   
@@ -183,6 +184,14 @@
             <!---<form action="" method="post">
               <input type="email" name="email"><input type="submit" value="Subscribe">
             </form>-->
+<br>
+		 Reloads And Visits : 
+		 <!-- Start of CuterCounter Code -->
+<a><img src="https://www.cutercounter.com/hits.php?id=huxfkkqn&nd=1&style=42" border="0" alt="hit counter"></a>
+<!-- End of CuterCounter Code -->
+
+
+
 
 
           </div>
