--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 <br>
 		 Reloads And Visits : 
 		 <!-- Start of CuterCounter Code -->
-<a><img src="https://www.cutercounter.com/hits.php?id=huxfkkqn&nd=1&style=42" border="0" alt="hit counter"></a>
+<a><img src="https://www.cutercounter.com/hits.php?id=huxfkkqn&nd=1&style=42" border="0" alt="Counter"></a>
 <!-- End of CuterCounter Code -->
 
 
