--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
                 Nagaland, India<br><br>
                 <strong>Phone:</strong> +91 7005-425-848<br>
                 <strong>Email:</strong> manglumukhvillage@gmail.com<br>
+				<i class="bx bx-phone-call"></i> : +91 7005425848
               </p>
               <div class="social-links mt-3">
                  
