--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/day-multipurpose-html-template-for-free/ -->
-        Designed by <a href="https://hamsdaobhatari.github.io/official/">HAMSRINGDAO BHATARI OFFICIAL.</a>
+        Designed By <a href="https://hamsdaobhatari.github.io/official/">HAMSRINGDAO BHATARI OFFICIAL.</a>
       </div>
     </div>
   </footer><!-- End Footer -->
@@ -240,4 +240,3 @@
 </body>
 
 </html>
-
